--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -2,6 +2,6 @@
 <head></head>
 <body style="text-align: center">
   <h1>Prism: Where The Nerds Go!</h1>
-  <%= image_tag "prism.svg" %>
+  <%= image_tag "prism.png" %>
 </body>
 </html>
